--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-typography": "^3.3.0",
     "gatsby-source-filesystem": "^3.3.0",
     "gatsby-transformer-remark": "^4.0.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
@@ -30,6 +31,8 @@
     "typography-theme-kirkham": "^0.16.19"
   },
   "devDependencies": {
+    "eslint": "^7.26.0",
+    "eslint-config-react-app": "^6.0.0",
     "prettier": "2.2.1"
   },
   "repository": {
