--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@emotion/react": "^11.1.5",
     "gatsby": "^3.3.1",
     "gatsby-plugin-emotion": "^6.3.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-image": "^1.5.0",
     "gatsby-plugin-manifest": "^3.3.0",
     "gatsby-plugin-react-helmet": "^4.3.0",
+    "gatsby-plugin-sharp": "^3.5.0",
     "gatsby-plugin-typography": "^3.3.0",
-    "gatsby-source-filesystem": "^3.3.0",
+    "gatsby-source-filesystem": "^3.5.0",
     "gatsby-transformer-remark": "^4.0.0",
+    "gatsby-transformer-sharp": "^3.5.0",
     "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
