changed font & CSS,added SEO

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-helmet": "^6.1.0",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
-    "typography-theme-kirkham": "^0.16.19"
+    "typography-theme-kirkham": "^0.16.19",
+    "typography-theme-parnassus": "^0.16.19"
   },
   "devDependencies": {
     "eslint": "^7.26.0",
