--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "codetetris",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "developer blog",
   "version": "0.1.0",
+  "author": "taerikor <akdud153@gmail.com>",
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
@@ -15,7 +16,6 @@
   },
   "dependencies": {
     "gatsby": "^3.3.1",
-    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^1.5.0",
     "gatsby-plugin-manifest": "^3.3.0",
     "gatsby-plugin-react-helmet": "^4.3.0",
@@ -30,8 +30,6 @@
     "react-helmet": "^6.1.0",
     "react-typography": "^0.16.19",
     "typography": "^0.16.21",
-    "typography-theme-grand-view": "^0.16.19",
-    "typography-theme-irving": "^0.16.19",
     "typography-theme-parnassus": "^0.16.19"
   },
   "devDependencies": {
@@ -41,9 +39,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/taerikor/gatsby-blog.git"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/taerikor/gatsby-blog/issues"
   }
 }
