--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby": "^3.3.1",
     "gatsby-plugin-image": "^1.5.0",
     "gatsby-plugin-manifest": "^3.3.0",
+    "gatsby-plugin-preact": "^5.6.0",
     "gatsby-plugin-react-helmet": "^4.3.0",
     "gatsby-plugin-sharp": "^3.5.0",
     "gatsby-plugin-typography": "^3.3.0",
@@ -25,6 +26,8 @@
     "gatsby-transformer-remark": "^4.0.0",
     "gatsby-transformer-sharp": "^3.5.0",
     "lodash": "^4.17.21",
+    "preact": "^10.5.13",
+    "preact-render-to-string": "^5.1.19",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
