--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "codetetris",
   "private": true,
-  "description": "developer blog",
+  "description": "JS development blog",
   "version": "0.1.0",
   "author": "taerikor <akdud153@gmail.com>",
-  "license": "0BSD",
+  "license": "MIT",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
@@ -22,6 +22,7 @@
     "gatsby-plugin-react-helmet": "^4.3.0",
     "gatsby-plugin-sharp": "^3.5.0",
     "gatsby-plugin-typography": "^3.3.0",
+    "gatsby-plugin-webfonts": "^2.1.0",
     "gatsby-source-filesystem": "^3.5.0",
     "gatsby-transformer-remark": "^4.0.0",
     "gatsby-transformer-sharp": "^3.5.0",
