--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   },
   "dependencies": {
     "gatsby": "^3.3.1",
+    "gatsby-plugin-feed": "^3.6.0",
+    "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-image": "^1.5.0",
     "gatsby-plugin-manifest": "^3.3.0",
+    "gatsby-plugin-offline": "^4.6.0",
     "gatsby-plugin-preact": "^5.6.0",
     "gatsby-plugin-react-helmet": "^4.3.0",
     "gatsby-plugin-sharp": "^3.5.0",
