--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-preact": "^5.6.0",
     "gatsby-plugin-react-helmet": "^4.3.0",
     "gatsby-plugin-sharp": "^3.5.0",
+    "gatsby-plugin-sitemap": "^4.2.0",
     "gatsby-plugin-typography": "^3.3.0",
     "gatsby-plugin-webfonts": "^2.1.0",
     "gatsby-source-filesystem": "^3.5.0",
