--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-plugin-sitemap": "^4.2.0",
     "gatsby-plugin-typography": "^3.3.0",
     "gatsby-plugin-webfonts": "^2.1.0",
+    "gatsby-remark-images": "^5.3.0",
     "gatsby-source-filesystem": "^3.5.0",
     "gatsby-transformer-remark": "^4.0.0",
     "gatsby-transformer-sharp": "^3.5.0",
