--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "gatsby-plugin-typography": "^3.3.0",
     "gatsby-plugin-webfonts": "^2.1.0",
     "gatsby-remark-images": "^5.3.0",
+    "gatsby-remark-prismjs": "^5.3.0",
     "gatsby-source-filesystem": "^3.5.0",
     "gatsby-transformer-remark": "^4.0.0",
     "gatsby-transformer-sharp": "^3.5.0",
     "lodash": "^4.17.21",
     "preact": "^10.5.13",
     "preact-render-to-string": "^5.1.19",
+    "prismjs": "^1.23.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
