--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-plugin-sitemap": "^4.2.0",
     "gatsby-plugin-typography": "^3.3.0",
     "gatsby-plugin-webfonts": "^2.1.0",
+    "gatsby-remark-embed-video": "^3.1.1",
     "gatsby-remark-images": "^5.3.0",
     "gatsby-remark-prismjs": "^5.3.0",
     "gatsby-source-filesystem": "^3.5.0",
