--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "gatsby": "^3.3.1",
+    "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-feed": "^3.6.0",
     "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-image": "^1.5.0",
